@@ -52,7 +52,7 @@ cdma_menu_item_info_destroy (gpointer data)
 	g_slice_free (CdmaMenuItemInfo, data);
 }
 
-#define DEFAULT_CDMA_NAME _("Auto CDMA network connection")
+#define DEFAULT_CDMA_NAME _("Auto Mobile Broadband (CDMA) connection")
 
 static NMConnection *
 cdma_new_auto_connection (NMDevice *device,
@@ -232,15 +232,9 @@ cdma_add_menu_item (NMDevice *device,
 			desc = (char *) nm_device_get_iface (device);
 		g_assert (desc);
 
-		if (g_slist_length (connections) > 1)
-			text = g_strdup_printf (_("CDMA Connections (%s)"), desc);
-		else
-			text = g_strdup_printf (_("CDMA Network (%s)"), desc);
+		text = g_strdup_printf (_("Mobile Broadband (%s)"), desc);
 	} else {
-		if (g_slist_length (connections) > 1)
-			text = g_strdup (_("CDMA Connections"));
-		else
-			text = g_strdup (_("CDMA Network"));
+		text = g_strdup (_("Mobile Broadband"));
 	}
 
 	item = gtk_menu_item_new_with_label (text);
@@ -315,7 +309,7 @@ cdma_get_icon (NMDevice *device,
 
 	switch (state) {
 	case NM_DEVICE_STATE_PREPARE:
-		*tip = g_strdup_printf (_("Dialing CDMA device %s..."), iface);
+		*tip = g_strdup_printf (_("Dialing mobile broadband device %s..."), iface);
 		break;
 	case NM_DEVICE_STATE_CONFIG:
 		*tip = g_strdup_printf (_("Starting PPP on device %s..."), iface);
@@ -423,6 +417,8 @@ ask_for_password (NMDevice *device,
 	GtkBox *box;
 	char *dev_str;
 	NMCdmaInfo *info;
+	NMSettingConnection *s_con;
+	char *tmp;
 
 	info = g_new (NMCdmaInfo, 1);
 	info->context = context;
@@ -432,14 +428,18 @@ ask_for_password (NMDevice *device,
 
 	dialog = GTK_DIALOG (gtk_dialog_new ());
 	gtk_window_set_modal (GTK_WINDOW (dialog), TRUE);
-	gtk_window_set_title (GTK_WINDOW (dialog), _("CDMA Network Password"));
+	gtk_window_set_title (GTK_WINDOW (dialog), _("Mobile broadband network password"));
 
 	w = gtk_dialog_add_button (dialog, GTK_STOCK_CANCEL, GTK_RESPONSE_REJECT);
 	w = gtk_dialog_add_button (dialog, GTK_STOCK_OK, GTK_RESPONSE_OK);
 	info->ok_button = w;
 	gtk_window_set_default (GTK_WINDOW (dialog), info->ok_button);
 
-	w = gtk_label_new (_("A password is required to connect to the CDMA network."));
+	s_con = NM_SETTING_CONNECTION (nm_connection_get_setting (connection, NM_TYPE_SETTING_CONNECTION));
+	g_assert (s_con->id);
+	tmp = g_strdup_printf (_("A password is required to connect to '%s'."), s_con->id);
+	w = gtk_label_new (tmp);
+	g_free (tmp);
 	gtk_box_pack_start (GTK_BOX (dialog->vbox), w, TRUE, TRUE, 0);
 
 	dev_str = g_strdup_printf ("<b>%s</b>", utils_get_device_description (device));
